--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.12.0",
     "redux-persist": "^6.0.0",
+    "swiper": "^12.0.3",
     "yup": "^1.7.1"
   },
   "devDependencies": {
